mgmt swagger
